fix card spacing

--- a/src/App.css
+++ b/src/App.css
@@ -23,13 +23,14 @@ content#grid {
   margin-top: 130px;
   padding: 30px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
   grid-column-gap: 15px;
   grid-row-gap: 15px;
 }
 
 div.team-card {
   min-width: 270px;
+  max-width: 350px;
   background-color: white;
   height: 400px;
   display: inline-block;
